<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.table.connect.TableConnectActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="Connect To Table"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/text_connect_to_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Connect to Home Game 1" />

            <RadioGroup
                android:id="@+id/connect_Type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="24dp">

                <RadioButton
                    android:id="@+id/radio_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingBottom="8dp"
                    android:text="@string/connect_as_player" />

                <RadioButton
                    android:id="@+id/radio_viewer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_as_viewer" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buy_in_linear_layout"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/choose_buy_in_amount"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/spinner_border"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <EditText
                        android:id="@+id/buy_in_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_buy_in_amount"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="32dp"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/button_min_buy_in"
                        style="@style/PrimaryLightButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0.5"
                        android:text="@string/min_buy_in" />

                    <Button
                        android:id="@+id/button_max_buy_in"
                        style="@style/PrimaryLightButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/max_buy_in" />
                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/button_connect_table"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_table" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>