<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.activity.login.LoginActivity">

    <FrameLayout
        android:id="@+id/logoFrame"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:background="@drawable/bg_logo_ring"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_logo_inner"
            android:clipToOutline="true"
            android:contentDescription="@string/app_logo_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />
    </FrameLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="sans-serif-black"
        android:letterSpacing="0.18"
        android:text="@string/login_title"
        android:textColor="@color/tableGold"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/subtitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoFrame" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0.85"
        android:letterSpacing="0.32"
        android:text="@string/login_subtitle"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <Button
        android:id="@+id/loginButton"
        style="@style/PrimaryLightOutlineButton"
        android:layout_width="0dp"
        android:layout_marginTop="40dp"
        android:text="@string/login_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/leftVerticalGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08333" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9177" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomHorizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9761" />

    <TextView
        android:id="@+id/websiteTextView"
        style="@style/LinkTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/made_by"
        app:layout_constraintBottom_toTopOf="@id/bottomHorizontalGuideline" />

</androidx.constraintlayout.widget.ConstraintLayout>
